--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,64 @@
-//
+
+
+
+
+* {
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Nunito', sans-serif;
+}
+
+#layout {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+}
+
+nav {
+    background-color: #2C3A47;
+    // height: 100%;
+    min-height: 100vh;
+    max-width: 100%;
+
+    .logo-section {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100px;
+        background-color: rgba(0, 0, 0, 0.205);
+
+        p {
+            color: #fff;
+            font-style: italic;
+
+        }
+    }
+
+    ul {
+        margin-top: 30px;
+        padding: 0;
+
+        li {
+            list-style: none;
+
+
+            a {
+                text-decoration: none;
+                color: #fff;
+                font-weight: 500;
+                display: block;
+                padding: 10px 15px;
+            }
+        }
+
+        a:hover {
+            color: #25CCF7;
+            background-color: rgba(37, 204, 247, 0.12);
+        }
+
+        a:active {
+            color: #25CCF7;
+            background-color: rgba(37, 204, 247, 0.12);
+        }
+    }
+
+}
