--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,7 +13,7 @@
     grid-template-columns: 1fr 5fr;
 }
 
-nav {
+#myNav {
     background-color: #2C3A47;
     // height: 100%;
     min-height: 100vh;
