Books CRUD completed

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,6 +8,20 @@
   font-family: "Nunito", sans-serif;
 }
 
+.bae {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  z-index: -990000;
+  text-align: right;
+}
+
+.bae img {
+  /* opacity: 0.30; */
+  text-align: right;
+  width: 50%;
+}
+
 #layout {
   display: grid;
   grid-template-columns: 1fr 5fr;
@@ -26,7 +40,6 @@
           justify-content: center;
   -webkit-box-align: center;
           align-items: center;
-  height: 100px;
   background-color: rgba(0, 0, 0, 0.205);
 }
 
