list filtering add to all pages

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,6 +8,14 @@
   font-family: "Nunito", sans-serif;
 }
 
+.hide {
+  display: none;
+}
+
+.show {
+  display: initial;
+}
+
 .bae {
   position: absolute;
   bottom: 0px;
