--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,7 +9,12 @@
     box-sizing: border-box;
     font-family: 'Nunito', sans-serif;
 }
-
+.hide {
+    display: none;
+}
+.show{
+    display: initial;
+}
 .bae {
     position: absolute;
     bottom: 0px;
