--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -83,3 +83,30 @@
     }
 
 }
+
+
+.fab{
+    position: absolute;
+    bottom: 50px;
+    right: 50px;
+    background: #007bff;
+    padding: 20px;
+    color: rebeccapurple;
+    border-radius: 100%;
+    width: 70px;
+    height: 70px;
+    box-shadow: rgba(0,0,0,.35) 3px 3px 6px;
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.fab a i{
+    color: white;
+    font-size: 20px;
+}
+
+.fab:hover{
+    background: #016AD9;
+}
