--- a/public/css/app.css
+++ b/public/css/app.css
@@ -191,3 +191,31 @@
   background-color: rgba(37, 204, 247, 0.12);
 }
 
+.fab {
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+  background: #007bff;
+  padding: 20px;
+  color: rebeccapurple;
+  border-radius: 100%;
+  width: 70px;
+  height: 70px;
+  box-shadow: rgba(0, 0, 0, 0.35) 3px 3px 6px;
+  display: -webkit-box !important;
+  display: flex !important;
+  -webkit-box-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+          justify-content: center;
+}
+
+.fab a i {
+  color: white;
+  font-size: 20px;
+}
+
+.fab:hover {
+  background: #016AD9;
+}
+
