--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -31,13 +31,14 @@
 
 #layout {
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 250px 5fr;
 }
 
 #myNav {
     background-color: #2C3A47;
     // height: 100%;
     min-height: 100vh;
+    // position: fixed;
     max-width: 100%;
     position: relative;
 
@@ -46,6 +47,8 @@
         justify-content: center;
         align-items: center;
         // height: 100px;
+        position: fixed;
+        width: 250px;
         background-color: rgba(0, 0, 0, 0.205);
 
         p {
@@ -56,9 +59,11 @@
     }
 
     ul {
-        // position: fixed;
+        position: fixed;
         margin-top: 30px;
+        width: 250px;
         padding: 0;
+        top: 180px;
 
         li {
             list-style: none;
